src/objects/UserActivityMilestone__c.object
<CustomObject>
    <fields>
        <fullName>ActivityMilestones__c</fullName>
        <label>ActivityMilestone</label>
        <referenceTo>ActivityMilestones__c</referenceTo>
        <relationshipName>MemberActivityMilestones</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Milestone_Timestamp__c</fullName>
        <label>Activity Milestone Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <referenceTo>Activity__c</referenceTo>
        <relationshipName>MemberActivites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Attachment_ID__c</fullName>
        <description>Stores the Attachment ID for code submissions loaded into SFDC</description>
        <label>Attachment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MemberActivites</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Activity Milestone</label>
    <nameField>
        <displayFormat>UAM-{000000000}</displayFormat>
        <label>UserActivityMilestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Activity Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>